--- a/index.html
+++ b/index.html
@@ -2,11 +2,173 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>Gitチュートリアル</title>
+        <title>Web Designer - Shintaro araki</title>
+        <meta name="description" content="Webデザイナー見習い 荒木 慎太郎のポートフォリオサイトです。東京を中心に活動しています。">
+        <meta name="keywords" content="Web, デザイン, デザイナー, ポートフォリオ, Web制作">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     </head>
     <body>
-        <h1>はじめてのバージョン管理</h1>
-        <p>Gitを使ってバージョン管理する。</p>
-        <img src="git-logo.png" alt="git logo">
+        <header>
+            <a href="#contact" class="button-contact"><i aria-label="お問い合わせ" class="fa fa-envelope-o"></i></a>
+            <div class="profile">
+                <h1 class="site-title abel uppercase text-center">Web Designer <span>Shintaro Araki</span></h1>
+                <img src="./images/myprofile.jpg" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
+                <p>東京都在住のWebデザイナー、荒木 慎太郎です。オンラインスクールでWeb制作について学び、Webデザイナー見習いとして日々奮闘しています。
+                これからさらにWeb制作の技術や知識を身につけて、「このサイト面白いな」と思ってもらえるサイトを作っていきたいと思います。</p>
+            </div>
+        </header>
+        <main>
+    <!-- ここからskills -->
+    <section id="skills">
+        <h2 class="text-center">Skills</h2>
+        <div class="container">
+            <div class="skill-box">
+                <i aria-hidden="true" class="skill-icon fa fa-laptop"></i>
+                <h3 class="text-center">Web</h3>
+                <p>HTML/CSSでのコーディングができます。<br>（まだまだ見習いですが・・・笑）</p>
+            </div>
+            <div class="skill-box">
+                <i  aria-hidden="true" class="fa fa-trash"></i>
+                <h3 class="text-center">Dansyari</h3>
+                <p>断捨離。ミニマリストに感銘を受けて、モノを少なくする生き方をしています。</p>
+            </div>
+            <div class="skill-box">
+                <i aria-hidden="true" class="skill-icon fa fa-commenting-o"></i>
+                <h3 class="text-center">English</h3>
+                <p>中学生の頃から大好きで、今でも勉強を続けています。<br>英検1級挑戦中！</p>
+            </div>
+        </div>
+    </section>
+    <!-- ここまでskills -->
+    <!-- ここからWorks -->
+    <section id="works">
+        <h2 class="text-center">Works</h2>
+        <div class="works-box">
+            <a href="#">
+                <img src="./images/img_work_site2.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <div class="works-box-inner">
+                    <div class="text-center">
+                        <h3>株式会社きらめき コーポレートサイト</h3>
+                        <small>2016.04.20</small>
+                        <span class="button-readmore">Read More</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="works-box">
+            <a href="#">
+                <img src="./images/img_work_card2.jpg" alt="きらめき花子様 名刺デザイン">
+                <div class="works-box-inner">
+                    <div class="text-center">
+                        <h3>きらめき花子様 名刺</h3>
+                        <small>2016.04.20</small>
+                        <span class="button-readmore">Read More</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="works-box">
+            <a href="#">
+                <img src="./images/img_work_blog2.jpg" alt="WordPressオリジナルテーマ">
+                <div class="works-box-inner">
+                    <div class="text-center">
+                        <h3>ブログデザイン</h3>
+                        <small>2016.04.20</small>
+                        <span class="button-readmore">Read More</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="works-box">
+            <a href="#">
+                <img src="./images/img_work_card2.jpg" alt="きらめき花子様 名刺デザイン">
+                <div class="works-box-inner">
+                    <div class="text-center">
+                        <h3>きらめき花子様 名刺</h3>
+                        <small>2016.04.20</small>
+                        <span class="button-readmore">Read More</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="works-box">
+            <a href="#">
+                <img src="./images/img_work_blog2.jpg" alt="WordPressオリジナルテーマ">
+                <div class="works-box-inner">
+                    <div class="text-center">
+                        <h3>ブログデザイン</h3>
+                        <small>2016.04.20</small>
+                        <span class="button-readmore">Read More</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="works-box">
+            <a href="#">
+                <img src="./images/img_work_site2.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <div class="works-box-inner">
+                    <div class="text-center">
+                        <h3>株式会社きらめき コーポレートサイト</h3>
+                        <small>2016.04.20</small>
+                        <span class="button-readmore">Read More</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="works-box">
+            <a href="#">
+                <img src="./images/img_work_site2.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <div class="works-box-inner">
+                    <div class="text-center">
+                        <h3>株式会社きらめき コーポレートサイト</h3>
+                        <small>2016.04.20</small>
+                        <span class="button-readmore">Read More</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="works-box">
+            <a href="#">
+                <img src="./images/img_work_card2.jpg" alt="きらめき花子様 名刺デザイン">
+                <div class="works-box-inner">
+                    <div class="text-center">
+                        <h3>きらめき花子様 名刺</h3>
+                        <small>2016.04.20</small>
+                        <span class="button-readmore">Read More</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="works-box">
+            <a href="#">
+                <img src="./images/img_work_blog2.jpg" alt="WordPressオリジナルテーマ">
+                <div class="works-box-inner">
+                    <div class="text-center">
+                        <h3>ブログデザイン</h3>
+                        <small>2016.04.20</small>
+                        <span class="button-readmore">Read More</span>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </section> 
+    <!-- ここまでWorks -->
+    <!-- ここからcontact -->
+    <section id="contact">
+        <h2 class="text-center">Contact</h2>
+        <ul>
+            <li><a href="mailto:reirou.style@gmail.com@te"><i aria-label="メール" class="fa fa-envelope-o"></i></a></li>
+            <li class="github"><a href="https://github.com/shiroron24"><i aria-label="GitHub" class="fa fa-github"></i></a></li>
+            <li class="twitter"><a href="https://twitter.com/shiroron7"><i aria-label="Twitter" class="fa fa-twitter" ></i></a></li>
+        </ul>
+    </section>
+    <!-- ここまでcontact -->
+    </main>
+        <footer>
+            <!-- コピーライトが入るところです -->
+            <small class="text-center abel uppercase">&copy; Shintaro Araki, All Rights Reserved.</small>
+        </footer>
     </body>
 </html>
